2008-11-06  reedom  <fujinaka.tohru@gmail.com>

        * [FIX] Once debugger engine passed invalid fileuri, which
                have http:// scheme instead of file://, GEBEN made
                Emacs raise exceptions at exitting Emacs.
        
2008-11-04  reedom  <fujinaka.tohru@gmail.com>

        * [ADD] Added Makefile.
        * [ADD] New commands `geben-mode-help' and similar to display
                description and key bindings of GEBEN's each mode.
        * [CHG] Face definition: `geben-backtrace-fileuri'
        * [CHG] Face definition: `geben-breakpoint-face'
        
2008-11-01  reedom  <fujinaka.tohru@gmail.com>

        * [CHG] Dropped Emacs 21.4 due to use tree-widget.el for the
                context buffer.
        * [ADD] New command `geben-display-context and related commands.
        
2008-10-29  reedom  <fujinaka.tohru@gmail.com>

        * [CHG] Renamed `ogeben-debug-target-remotep'
                to `geben-always-use-mirror-file-p'.
        * [CHG] Renamed `geben-close-remote-file-after-finish'
                to `geben-close-mirror-file-after-finish'.

2008-10-27  reedom  <fujinaka.tohru@gmail.com>

        * [FIX] Location path for remotely fetched source files.

2008-10-25  reedom  <fujinaka.tohru@gmail.com>

        * [CHG] Rearranged function/variable appearance order
        * [FIX] hit-value of breakpoints were ignored.
        * [FIX] In the breakpoint list buffer it was not able for
                breakpoints except line type to went to setting
                line.
        * [FIX] Breakpoint marker handling was not enough for
                breakpoints except line type.

2008-10-24  reedom  <fujinaka.tohru@gmail.com>

        * [FIX] Improved session finishing handling.
        * [FIX] When reopen a debuggee script file which has
                any line breakpoints, GEBEN had failed to restore
                overlays.
        * [CHG] Wrote some breakpoints related code to overcome